# repertoire

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  noxfile.py  pyproject.toml  tox.ini
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: ci.yaml  periodic-ci.yaml
changelog.d/: 20250909_173345_rra_DM_52453.md  20250910_092205_rra_DM_52453.md  20250910_094254_rra_DM_52453.md  20250910_124235_rra_DM_52453.md  20250912_174804_rra_DM_52490.md  20250923_121955_rra_DM_52601.md  20250923_131557_rra_DM_52491.md  20250923_145936_rra_DM_52601.md  20250923_161753_rra_DM_52601.md  20250923_162520_rra_DM_52601.md  20250924_142554_rra_DM_52622.md  20250924_165243_rra_DM_52624.md  20250925_103628_rra_DM_52644.md  20250925_104310_rra_DM_52644.md  20250925_115216_rra_DM_52644.md  20250930_142129_rra_DM_52657.md  20251003_155308_rra_DM_52751.md  20251003_170311_rra_DM_52751.md  20251003_171408_rra_DM_52751.md  20251008_170119_rra_DM_52815.md  20251016_170712_rra_DM_52944.md  20251017_075358_rra_DM_52944.md  20251017_122140_rra_DM_52944.md  20251217_174318_steliosvoutsinas_DM_53642.md  20260108_130824_rra_DM_53730.md  20260115_113533_rra_DM_53797.md  20260116_160539_rra_DM_53856.md  20260129_235647_steliosvoutsinas_DM_53988.md  20260219_205930_steliosvoutsinas_DM_54207.md  20260220_192301_steliosvoutsinas_DM_54207.md  20260224_164055_rra_DM_54241.md  20260224_172108_rra_DM_54241.md  20260224_174824_rra_DM_54241.md  20260224_180120_rra_DM_54241.md  20260303_185700_rra_DM_54318.md  20260514_173913_steliosvoutsinas_DM_54647.md  20260527_172249_rra_DM_55086.md  20260529_192117_rra_DM_55086.md  20260603_205713_steliosvoutsinas_DM_55134.md  20260608_165437_rra_DM_55165.md  (+7 more)
client/: pyproject.toml
client/src/rubin/repertoire/: __init__.py  _builder.py  _client.py  _config.py  _dependencies.py  _exceptions.py  _mock.py  _models.py
docs/: _rst_epilog.rst  api.rst  documenteer.toml  index.rst
docs/admin/: index.rst  metrics.rst  tap-schema.rst
docs/dev/: development.rst  index.rst  release.rst
docs/user-guide/: applications.rst  datasets.rst  environment.rst  index.rst  influxdb.rst  initialization.rst  nublado.rst  server-api.rst  services.rst  testing.rst
scripts/: install-base-packages.sh  install-dependency-packages.sh
src/repertoire/: __init__.py  cli.py  config.py  constants.py  exceptions.py  factory.py  main.py  models.py
src/repertoire/dependencies/: builder.py  config.py  discovery.py  events.py  hips.py  registry.py
src/repertoire/handlers/: discovery.py  external.py  hips.py  internal.py  registry.py
src/repertoire/registry/: constants.py  factory.py  models.py  oai.py  oai_models.py  store.py
src/repertoire/schema/: __init__.py  base.py  version.py
src/repertoire/services/: tap_schema.py
src/repertoire/storage/: tap_schema.py
src/repertoire/tap_schema/: __init__.py  download.py  manager.py
tests/: config_test.py  conftest.py  version_test.py
tests/client/: builder_test.py  client_test.py  dependencies_test.py  influxdb_test.py  mock_test.py  models_test.py  nublado_test.py  service_test.py
tests/data/config/: ivoa_rules.yaml  minimal.yaml  no-hips.yaml  no-legacy.yaml  phalanx.yaml  registry.yaml  sentry.yaml  tap-custom.yaml  tap.yaml
tests/data/input/: properties.tmpl
tests/data/output/: hips-dp02-list  hips-dp1-list  idfdev_efd-creds.json  idfdev_efd.json  idfdev_metrics-creds.json  idfdev_metrics.json  minimal.json  nublado.json  phalanx.json  unknown.json
tests/data/output/registry/: bad_argument_date_range.xml  bad_argument_duplicate.xml  bad_argument_forbidden.xml  bad_argument_invalid_date.xml  bad_argument_mixed_granularity.xml  bad_verb.xml  cannot_disseminate_format.xml  get_record.xml  get_record_missing_id.xml  (+9 more)
tests/data/secrets/: idfdev_metrics-password  token
tests/handlers/: discovery_test.py  external_test.py  hips_test.py  internal_test.py  registry_test.py
tests/services/: tap_schema_test.py
tests/storage/: schema_test.py
tests/support/: constants.py  data.py  hips.py
tests/tap_schema/: cli_test.py  download_test.py  manager_test.py
